Modified the files

--- a/mypy.ini
+++ b/mypy.ini
@@ -4,3 +4,4 @@ warn_unused_configs = True
 ignore_missing_imports = True
 disallow_any_generics = True
 disallow_subclassing_any = False
+follow_imports = silent
